ex8 student files
Added ex8 to homepage

--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
              <a href="project-one/index.html">Final Project 1: My Favorite Letterform</a>
              <a href='project2/new-mockup.pdf'>Project 2: Static Digital Mockup</a>
              <a href="project2/menu.html"> Project 2: Final Site</a>
+             <a href="ex8-student-files/index2.html"> Exercise 8: Responsive Design </a>
              <div class="spacing-box">
                <img src="project-one/assets/rose.jpg" alt="">
              </div>
     </div>
-  
+
 </section>
     </div>
 </body>
