--- a/project2/evolution.html
+++ b/project2/evolution.html
@@ -43,21 +43,45 @@
     <img src="the1975/first-album.png"></img>
   </section>
   <section class='grey-outline'>
+    <h4> I Like it When You Sleep, for You Are So Beautiful
+      Yet So Unaware of It</h4>
+    <p>
+      The 1975 made a big shift in their second album, with the new addition
+      of color and graphic designer, Samuel Burgess Johnson. While “there was
+      so much aesthetic identity with the box… the black and white thing had to
+      change,” Healy claimed. After touring, Healy noticed fans on Tumblr becoming
+      bored with the old album artwork without “new visual information,” so they
+      began posting new edits of the bands album in pink. With this insight,
+      the band used neon pink signs for their new album art and song visuals.
+    </p>
   </section>
   <section class='black-box'> </section>
   <div class='second-album'>
     <img src="the1975/second-album.png"> </img>
+
   </div>
   <div class='maroon-box'>
   </div>
 
   <section class='third-album'>
     <img src='the1975/third-album.png' width='300' height='300'></img>
+    <h3>A Brief Inquiry Into Online Relationships</h3>
+    <p> In a more honest third album, Healy wasn’t worried on its presentation.
+      This mindset came across clearly in their album art designed by Johnson
+      that “wasn’t really referencing anything, [but] was more of a clean, modern,
+      deconstruction.” This album, in Healy’s mind, was more of an ode to creativity,
+      as he claimed himself to be “self-referential” and obsessed with alluding
+      to other content creators and their important works.
   </section>
 
   <section class='second-grey'>
     <section class='fourth-album'>
       <img src='the1975/fourth-album.jpg' width='300' height='300'> </img>
+<h4>Notes on a Conditional Form (NOAF)</h4>
+<p>
+  In Healy’s own words, NOAF is more of a “wabi sabi album,” based on the Japanese concept of acceptance in imperfection. With this in mind, the band’s album art contains more texture, visual content, and simplicity than their previous albums.
+
+  Click here for the “Aesthetic History of the 1975”</p>
     </section>
   </section>
   <section class='yellow-box'> </section>
