--- a/project2/menu.html
+++ b/project2/menu.html
@@ -6,7 +6,7 @@
   <title>The 1975- Home</title>
   <link rel="stylesheet" href="https://use.typekit.net/gkq6odh.css">
   <link href="https://fonts.googleapis.com/css2?family=Lora&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap" rel="stylesheet">
-  <link href='styles.css' rel='stylesheet' />
+  <link href='new-styles.css' rel='stylesheet' />
 </head>
 
 <body>
