--- a/project2/religion.html
+++ b/project2/religion.html
@@ -75,7 +75,7 @@
 
 
   <section class="maroon-youtube-box">
-    <iframe src="https://open.spotify.com/embed/track/2J3ajGI1sVj9wnqThJHwPS" width="277" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    <iframe src="https://open.spotify.com/embed/track/2J3ajGI1sVj9wnqThJHwPS" top='10px' bottom='10px' width="277" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     <iframe src="https://open.spotify.com/embed/track/3tk5DaXxxUoV7b5nOdCDBv" width="277" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
   </section>
 
