--- a/project2/socjustice.html
+++ b/project2/socjustice.html
@@ -23,12 +23,50 @@
 
   </section>
 
-  <section class="normal">
-     <div class="container">
+  <section class="white-box-socjus">
     <h1> Social Justice </h1>
+    <p>Making a Change
+      From projecting the pride flag during their live performances of “Loving
+      Someone” to addressing climate change on their upcoming album, The 1975
+      does not shy from commenting on current events. But, of course,
+      that’s one of the reasons fans love them. There are plenty of times
+      The 1975 made statements with their music, but here are a few of the most
+      notable political statements by the band.</p>
+    <div class='pink-band-photo'>
+      <img src='the1975/pink-band-photo.jpg' width='440' height="250"></img>
     </div>
   </section>
+  <section class='maroon-box-2'>
 
+  </section>
+
+  <section class='grey-box-socjus'>
+    <div class="loving-someone">
+      <iframe width="410" height="220" src="https://www.youtube.com/embed/d65GR_qMFTY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </section>
+  <section class='black-box-2'>
+  </section>
+
+
+  <section class='black-box-socjus'>
+    <div class='box-2-youtube'>
+      <div class='grey-extension'></div>
+    <iframe width="370" height="230" src="https://www.youtube.com/embed/kBjM_v-KT44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+  gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class='maroon-box-3'> </div>
+</div>
+</section>
+
+
+  <section class='grey-box-socjus2'>
+<div class='climate-justice'>
+<iframe width="440" height="240" src="https://www.youtube.com/embed/4fwEG8XK1uU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div class='greta-thunberg'>
+<img src='the1975/the1975.jpg' width="270" height="190"></img>
+</div>
+  </section>
 </body>
 
 </html>
