--- a/project2/the-start.html
+++ b/project2/the-start.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset='UTF-8' />
   <title>The 1975- The Start</title>
-  <link href='styles.css' rel='stylesheet' />
+  <!-- <link href='styles.css' rel='stylesheet' /> -->
+  <link rel="stylesheet" href="new-styles.css">
 </head>
 
 <body>
   <section class="one">
     <div class="container">
       <h1> The 1975</h1>
+
 
       <nav>
         <a id='home' href="menu.html">Home</a>
@@ -20,45 +22,42 @@
         <a id='socjustice' href='socjustice.html'>Social Justice</a>
       </nav>
     </div>
-
+<h2> The Start </h2>
   </section>
 
   <section class="normal">
-    <div class="container">
-      <div class="shadowpic">
-        <img src='the1975/shadowpic.jpg' width='516' height='219'></img>
-      </div>
-      <div class="rectangle">
-        <img src='the1975/rectangle-box.png' width='355' height='174'></img>
-      </div>
-      <div class='matty'>
-        <img src='the1975/matty.jpg' width='185' height="174"></img>
-      </div>
-      <div class='history-of-band'>
-        <p> History of the band </p>
 
-        <p> The 1975 are an English pop rock band
-          formed in 2002 in Wilmslow, Cheshire. Now
-          based in Manchester, the band consists of
-          lead vocalist, producer, lyricist and rhythm
-          guitarist Matthew Healy, lead guitarist Adam
-          Hann, bassist Ross MacDonald, and
-          drummer/producer George Daniel. </p>
+    <!-- <h3> THE-START </h3> -->
+<div class="history">
+  <div class='history-of-band'>
+    <h3> History of the band </h3>
+
+    <p> The 1975 are an English pop rock band
+      formed in 2002 in Wilmslow, Cheshire. Now
+      based in Manchester, the band consists of
+      lead vocalist, producer, lyricist and rhythm
+      guitarist Matthew Healy, lead guitarist Adam
+      Hann, bassist Ross MacDonald, and
+      drummer/producer George Daniel. </p>
 
 
-      </div>
+  </div>
+  <div class='three-images'>
+<img src="the1975/three-images.png" height='105%' width="110%"> </img>
+  </div>
+</div>
+
+
       <!-- <h1> THE START </h1> -->
 
-    </div>
+      <iframe width="430" height="238" src="https://www.youtube.com/embed/rfGwnatzTMM"
+      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+      gyroscope; picture-in-picture" allowfullscreen></iframe>
   </section>
-  <section class='youtube'>
-    <iframe width="480" height="261" src="https://www.youtube.com/embed/rfGwnatzTMM"
-    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-    gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-  </section>
   <section class='second-text-box'>
-    <p> The band’s origins trace to their attendance at high school and playing
+
+    <p class='first-column'> The band’s origins trace to their attendance at high school and playing
       together as teenagers. Gigs organized by a council worker led the band to
       formally sign with Dirty Hit and Polydor Records. The band opened for
       several major acts and released a series of extended plays (Facedown, Sex,
@@ -66,6 +65,7 @@
        debut album (2013), which included the popular singles “Sex”,
        “Chocolate”, and “Robbers” and reached number one in the
       United Kingdom. </p>
+<div class='first-column'>
 
       <p>Their second album, I Like It When You Sleep, for You Are So Beautiful
         yet So Unaware of It (2016), reached No. 1 in the US, UK, Canada,
@@ -80,8 +80,8 @@
           third No. 1 album in the UK. The second, Notes on a Conditional Form,
           was released in May 2020 and became their fourth consecutive No.
           1 album in the UK. </p>
-
-        <p> The 1975 has garnered acclaim for their exploration of an eclectic
+</div>
+        <p class='first-column'> The 1975 has garnered acclaim for their exploration of an eclectic
           range of genres such as pop rock, synth-pop, R&B, funk rock,
           electropop, new wave forms of electronic music (such as UK garage,
           2-step and ambient),and forms of rock music (such as shoegaze,
