--- a/project2/evolution.html
+++ b/project2/evolution.html
@@ -2,9 +2,10 @@
 <html lang='en'>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta charset='UTF-8' />
   <title>The 1975- Evolution</title>
-  <link href='styles.css' rel='stylesheet' />
+  <link href='new-styles.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -22,69 +23,126 @@
       </nav>
     </div>
   </section>
-  <section class="container">
+  <!-- Static Section Begin -->
+  <section class="hybrid">
+    <!-- Row 1 Begin -->
+    <div class="row">
 
-    <h1> EVOLUTION </h1>
-    <section class="white-outline">
-      <div class='body-copy'>
-        <h3> The 1975 (self-titled)</h3>
-        <p>
-          In their first self titled album, the 1975 aimed to have album
+      <div class="quarter_column">
+        <img src="the1975/first-album.png" width='260px' height='234px' alt=""></img>
+
+      </div>
+
+      <div class="eighth_column">
+        <h3> The 1975 (self-titled) </h3>
+        <p> In their first self titled album, the 1975 aimed to have album
           artwork that was both “chic and simple.” Inspired by the Chanel logo,
           the 1975 created a brand off of a simple neon rectangle in black and
           white. Their almost 80s vibe also appeared in the rest of the album’s
           artwork, with photos taken for each song by George Daniel, a member of
-          the band. “We wanted something to look like a brand than a band,” Healy said.
+          the band. “We wanted something to look like a brand than a band,” Healy said.</p>
+      </div>
+
+      <div class="three-eighths_column">
+
+      </div>
+      <div class="extra quarter_column">
+
+      </div>
+
+    </div>
+
+    <!-- Row 2 Begin -->
+    <div class="row">
+      <div class="three-eighths_column2">
+
+      </div>
+      <div class="quarter_column2">
+      </div>
+      <div class="eighth_column2">
+        <h6> I Like it When You Sleep, for You Are So Beautiful
+          Yet So Unaware of It</h6>
+        <p>
+          The 1975 made a big shift in their second album, with an addition
+          of color and new graphic designer, Samuel Burgess Johnson. While there was
+       "aesthetic identity with the box…the black and white thing had to
+          change,” Healy said. After touring, Healy noticed fans on Tumblr becoming
+          bored without “new visual information" and artwork, so they
+          began posting new edits of the bands album in pink. With this insight,
+          the band used neon pink signs for their new album art and song visuals.
         </p>
       </div>
-    </section>
-  </section>
-  <section class='first-album'>
-    <img src="the1975/first-album.png"></img>
-  </section>
-  <section class='grey-outline'>
-    <h4> I Like it When You Sleep, for You Are So Beautiful
-      Yet So Unaware of It</h4>
-    <p>
-      The 1975 made a big shift in their second album, with the new addition
-      of color and graphic designer, Samuel Burgess Johnson. While “there was
-      so much aesthetic identity with the box… the black and white thing had to
-      change,” Healy claimed. After touring, Healy noticed fans on Tumblr becoming
-      bored with the old album artwork without “new visual information,” so they
-      began posting new edits of the bands album in pink. With this insight,
-      the band used neon pink signs for their new album art and song visuals.
-    </p>
-  </section>
-  <section class='black-box'> </section>
-  <div class='second-album'>
-    <img src="the1975/second-album.png"> </img>
 
-  </div>
-  <div class='maroon-box'>
-  </div>
+      <div class="extra quarter_column">
+<img src="the1975/second-album.png" width='260px' height='237px'alt=""> </img>
+      </div>
+      <div class="extra quarter_column2">
 
-  <section class='third-album'>
-    <img src='the1975/third-album.png' width='300' height='300'></img>
-    <h3>A Brief Inquiry Into Online Relationships</h3>
-    <p> In a more honest third album, Healy wasn’t worried on its presentation.
-      This mindset came across clearly in their album art designed by Johnson
-      that “wasn’t really referencing anything, [but] was more of a clean, modern,
-      deconstruction.” This album, in Healy’s mind, was more of an ode to creativity,
-      as he claimed himself to be “self-referential” and obsessed with alluding
-      to other content creators and their important works.
-  </section>
+      </div>
 
-  <section class='second-grey'>
-    <section class='fourth-album'>
-      <img src='the1975/fourth-album.jpg' width='300' height='300'> </img>
-<h4>Notes on a Conditional Form (NOAF)</h4>
+    </div>
+    <!-- Row 3 Begin -->
+    <div class="row">
+      <div class="quarter_column">
+        <img src='the1975/third-album.png' width='260px' height='236px'></img>
+
+      </div>
+
+      <div class="eighth_column">
+        <h3>A Brief Inquiry Into Online Relationships</h3>
+        <p> In a more honest third album, Healy wasn’t worried on its presentation.
+          This mindset came across clearly in their album art designed by Johnson
+          that “wasn’t really referencing anything, [but] was more of a clean, modern,
+          deconstruction.” This album, in Healy’s mind, was more of an ode to creativity,
+          as he claimed himself to be “self-referential” and obsessed with alluding
+          to other content creators and their important works.</p>
+      </div>
+      <div class="three-eighths_column">
+
+      </div>
+      <div class="extra quarter_column">
+      </div>
+
+      <div class="three-eighths_column">
+
+      </div>
+    </div>
+
+  <!-- Row 4 Begin -->
+  <div class="row">
+    <div class="three-eighths_column2">
+
+    </div>
+
+    <div class="quarter_column2">
+
+    </div>
+
+
+      <div class="eighth_column2">
+        <h6>Notes on a Conditional Form (NOAF)</h6>
+        <p>
+          In Healy’s own words, NOAF is more of a “wabi sabi album,” based on
+          the Japanese concept of acceptance in imperfection. With this in mind,
+          the band’s album art contains more texture, visual content, and simplicity
+          than their previous albums. </p>
 <p>
-  In Healy’s own words, NOAF is more of a “wabi sabi album,” based on the Japanese concept of acceptance in imperfection. With this in mind, the band’s album art contains more texture, visual content, and simplicity than their previous albums.
+          <a href="https://www.youtube.com/watch?v=KfGg4RylKR4&list=LLS_G5aMz_KTOhZr76BlBvKA&index=201">Click here for the “Aesthetic History of the 1975”
+          </a> </p>
+        </div>
+        <div class="extra quarter_column">
+          <img src='the1975/fourth-album.jpg' width='260px' height='235px'> </img>
 
-  Click here for the “Aesthetic History of the 1975”</p>
-    </section>
-  </section>
-  <section class='yellow-box'> </section>
+        </div>
+
+
+        <div class="extra quarter_column3">
+
+        </div>
+
+    </div>
+      </section>
+  <!-- Static Section end -->
 
 </body>
 
