--- a/project2/religion.html
+++ b/project2/religion.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='UTF-8' />
   <title>The 1975- Religion</title>
-  <link href='styles.css' rel='stylesheet' />
+  <link href='new-styles.css' rel='stylesheet' />
 </head>
 
 <body>
@@ -23,41 +23,51 @@
 
   </section>
 
-  <h1> Religion </h1>
+  <!-- Static Section Begin -->
+  <!-- <h3> Religion </h3> -->
+    <section class="static">
+      <div class="row">
+<div class="extra quarter_column">
+      <div class="quarter_column">
+        <h3> Spirituality and concept of religion </h3>
 
-  <section class="blue-box">
+        <p> In a lot of the 1975’s music, Matty healy goes back and forth in his
+          understanding of religion and spirituality. It is almost a love hate
+          kind of relationship. Having said this, Healy admits to be openly agnostic.
+          Even so, Healy uses his songs as a journal to explain where he's at and
+          reason why he’s struggled in the past with religion. His songs titled “Give Yourself
+          A Try,” “If I Believe You,” as well as “Jesus Christ 2005 God Bless
+          America,” go into a more in depth explanation as to what he believes
+          and why.</p>
+</div>
+</div>
+<div class="eighth_column">
+  <img src="the1975/blue-black-pic.png" width='340' height="190"> </img>
 
-    <section class="blue-black-pic">
-      <img src="the1975/blue-black-pic.png" width='400' height="230"> </img>
-    </section>
-    <section class='white-box'>
-      <h2> Spirituality and concept of religion </h2>
+</div>
 
-      <p> In a lot of the 1975’s music, Matty healy goes back and forth in his
-        understanding of religion and spirituality. It is almost a love hate
-        kind of relationship. Having said this, Healy admits to be openly agnostic.
-        Even so, Healy uses his songs as a journal to explain where he's at and
-        reason why he’s struggled in the past with religion. His songs titled “Give Yourself
-        A Try,” “If I Believe You,” as well as “Jesus Christ 2005 God Bless
-        America,” go into a more in depth explanation as to what he believes
-        and why.</p>
-    </section>
+    </div>
   </section>
 
-  <section class="second-blue-box">
-    <div class='believe-textbox'>
+  <!-- Maroon sidebar (Right) -->
+
+
+
+  <section class="second-box">
+      <div class="static three-eighths_column">
+      </div>
+    <div class='column-one'> <p>
       <h4> If I believe you</h4>
-      <p> “I’ve got a God-shaped hole/ That’s infected/ And I’m petrified of being
+     “I’ve got a God-shaped hole/ That’s infected/ And I’m petrified of being
         alone now,” Healy begins his song. “If I Believe,” is an explanation of Healy’s
         relationship with religion and the universe. “If I believe, will that make
         it stop? I’m begging for help/I’m asking you Jesus, show yourself,” Healy sings.
         He later adds that “I’ll be a child if you exist,” referring to the biblical
         concept of being a a child of God. In several points in the song, Healy builds
         off of this concept as he shapes his song to have a more gospel like feel,
-        as he includes a choir of gospel singers in several sections.
-      </p>
-
-      <div class='jc-box'>
+        as he includes a choir of gospel singers in several sections.</p>
+</div>
+<div class='column-one'>
         <h4>Jesus Christ 2005 God Bless America </h4>
         <p> The entirety of this song is basically a metaphor of Healy’s “frustration
           at the way religious society handles topics such as homosexuality” (dbknews).
@@ -66,18 +76,18 @@
           when he wonders out loud why the church claims to be welcoming, yet often pushes
           out those who are different or identify as lgbtq+. </p>
       </div>
+
+  </section>
+
+  <section class='maroon-youtube-box'>
+    <div class="flexy-box">
+      <iframe src="https://open.spotify.com/embed/track/2J3ajGI1sVj9wnqThJHwPS" top='11px' bottom='20px' width="266" height="337" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+      <iframe src="https://open.spotify.com/embed/track/3tk5DaXxxUoV7b5nOdCDBv" top='11px' bottom='24px' width="266" height="340" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
 
   </section>
 
-  <section class='second-white'>
-  </section>
 
-
-  <section class="maroon-youtube-box">
-    <iframe src="https://open.spotify.com/embed/track/2J3ajGI1sVj9wnqThJHwPS" top='10px' bottom='10px' width="277" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-    <iframe src="https://open.spotify.com/embed/track/3tk5DaXxxUoV7b5nOdCDBv" width="277" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-  </section>
 
 </body>
 
