--- a/project2/socjustice.html
+++ b/project2/socjustice.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset='UTF-8' />
   <title>The 1975- Social Justice</title>
-  <link href='styles.css' rel='stylesheet' />
+  <link href='new-styles.css' rel='stylesheet' />
 </head>
 
 <body>
@@ -23,50 +23,106 @@
 
   </section>
 
-  <section class="white-box-socjus">
-    <h1> Social Justice </h1>
-    <p>Making a Change
-      From projecting the pride flag during their live performances of “Loving
-      Someone” to addressing climate change on their upcoming album, The 1975
-      does not shy from commenting on current events. But, of course,
-      that’s one of the reasons fans love them. There are plenty of times
-      The 1975 made statements with their music, but here are a few of the most
-      notable political statements by the band.</p>
-    <div class='pink-band-photo'>
-      <img src='the1975/pink-band-photo.jpg' width='440' height="250"></img>
+  <section class="responsive">
+    <div class="row">
+      <div class="three-eighths_column">
+        <img src='the1975/pink-band-photo.jpg' width='401' height="226"></img>
+      </div>
+
+      <div class="extra quarter_column">
+        <h3> Social Justice </h3>
+        <p>Making a Change
+          From projecting the pride flag during their live performances of “Loving
+          Someone” to addressing climate change on their upcoming album, The 1975
+          does not shy from commenting on current events. But, of course,
+          that’s one of the reasons fans love them. There are plenty of times
+          The 1975 made statements with their music, but here are a few of the most
+          notable political statements by the band.</p>
+      </div>
+      <div class="quarter_column">
+      </div>
+
     </div>
-  </section>
-  <section class='maroon-box-2'>
+    <!-- Row 2 Begin -->
+    <div class="row">
+      <div class="extra second-quarter_column">
+      </div>
 
-  </section>
-
-  <section class='grey-box-socjus'>
-    <div class="loving-someone">
-      <iframe width="410" height="220" src="https://www.youtube.com/embed/d65GR_qMFTY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="second-three-eighths_column">
+      <h5>During their live performances of ‘Loving Someone’ </h5>
+      <p> In 2016, The 1975 premiered their album, I Like It When You Sleep, for
+        You Are So Beautiful Yet So Unaware of It and their song “Loving Someone.”
+         Although the song originally discussed Matty’s life and feelings, it came
+         to represent something much bigger.  Following the mass shooting at the
+         Pulse Nightclub in Orlando, The 1975 dedicated “Loving Someone” to
+         members of the LGBTQ+ community. The group projected a pride flag behind
+         them during a performance of “Loving Someone,” which eventually became a
+         trademark of the song and of their live shows.</p>
+      </div>
+      <div class="second-eighths_column">
+        <iframe width="296.05" height="220" src="https://www.youtube.com/embed/d65GR_qMFTY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+<div class="second-quarter_column">
+</div>
     </div>
-  </section>
-  <section class='black-box-2'>
-  </section>
+    <!-- Row 3 Begin -->
+    <div class="row">
+      <div class="extra third-quarter_column">
+
+      </div>
+      <div class="third-quarter_column">
+        <iframe width="359" height="210" src="https://www.youtube.com/embed/kBjM_v-KT44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
 
 
-  <section class='black-box-socjus'>
-    <div class='box-2-youtube'>
-      <div class='grey-extension'></div>
-    <iframe width="370" height="230" src="https://www.youtube.com/embed/kBjM_v-KT44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-  gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <div class='maroon-box-3'> </div>
+
+      <div class="third-eighth_column">
+
+      </div>
+      <div class="grey-extension">
+
+      </div>
+
+      <div class="third-three-eighths_column">
+        <h5>During their acceptance speech at the ‘Brit Awards’ </h5>
+        <p>In 2019, The 1975 won the Brit Award for “Album of the Year.”
+          The band used their platform to discuss current events and the state of
+          the music industry. Specifically, Matty Healy touched on how women in the
+          music industry are perceived. </p>
+          <p>“I want to read a couple of sentences that a friend of ours, Laura Snapes, said this week and I thought we should all think about it,” Healy said. “In music, male misogynist acts are examined for nuance and defended as traits of difficult artists while women are treated as hysterics who ‘don’t understand art.'”</p>
+        </p>
+      </div>
+      <div class="second-quarter_column">
+
+      </div>
+    </div>
+
+    <!-- Row 4 Begin -->
+    <div class="row">
+<div class="extra four-quarter_column">
+  <img src='the1975/the1975.jpg' width="300px" height="200px"></img>
+
 </div>
-</section>
+<div class="four-quarter_column">
 
-
-  <section class='grey-box-socjus2'>
-<div class='climate-justice'>
-<iframe width="440" height="240" src="https://www.youtube.com/embed/4fwEG8XK1uU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<h5>With their re-imagined version of ‘The 1975,’ featuring Greta Thunberg </h5>
+<p></p>
+<p>Since their self-titled record, The 1975 always opened their albums with a song
+   entitled “The 1975.” For their upcoming album, entitled Notes on a Conditional Form,
+   their signature song took on a different meaning. Narrated by activist Greta Thunberg,
+   this song discusses climate change and a time for civil disobedience and rebellion.
+</p>
 </div>
-<div class='greta-thunberg'>
-<img src='the1975/the1975.jpg' width="270" height="190"></img>
+<div class="four-three-eighths_column">
+  <iframe width="397" height="221" src="https://www.youtube.com/embed/4fwEG8XK1uU"
+  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+</div>
+
 </div>
   </section>
+
 </body>
 
 </html>
