--- a/project2/the-start.html
+++ b/project2/the-start.html
@@ -22,9 +22,13 @@
         <a id='socjustice' href='socjustice.html'>Social Justice</a>
       </nav>
     </div>
-<h2> The Start </h2>
-  </section>
 
+  </section>
+<div class="the-start-header">
+
+
+<img src="the1975/the-start-header.png" alt=""> </img>
+</div>
   <section class="normal">
 
     <!-- <h3> THE-START </h3> -->
