--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
              <a href='project2/new-mockup.pdf'>Project 2: Static Digital Mockup</a>
              <a href="project2/menu.html"> Project 2: Final Site</a>
              <a href="ex8-student-files/index2.html"> Exercise 8: Responsive Design </a>
-  
+
 
              <div class="spacing-box">
-               <img src="project-one/assets/rose.jpg" alt="">
+               <img src="project-one/assets/red-white.jpg" width:'354px' height:'654px' alt="">
              </div>
     </div>
 
