--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
              <a href='project2/new-mockup.pdf'>Project 2: Static Digital Mockup</a>
              <a href="project2/menu.html"> Project 2: Final Site</a>
              <a href="ex8-student-files/index2.html"> Exercise 8: Responsive Design </a>
+             <a href="exercise-9/index.html">Exercise 9</a>
 
 
              <div class="spacing-box">
