--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
              <a href='project2/new-mockup.pdf'>Project 2: Static Digital Mockup</a>
              <a href="project2/menu.html"> Project 2: Final Site</a>
              <a href="ex8-student-files/index2.html"> Exercise 8: Responsive Design </a>
-             <a href="exercise-9/index.html">Exercise 9</a>
+             <a href="exercise-9/index.html">Exercise 9: Responsive Design Pt.2</a>
+             <a href="exercise-10/index.html">Exercise 10: Digital Resume</a>
 
 
              <div class="spacing-box">
